GNOME Bugzilla – Bug 743659
All folders hidden after returning from search mode in GtkFileChooser
Last modified: 2015-01-28 23:27:56 UTC
* Open a GtkFileChooser in some app (I tested with gedit and gnome-builder) * Select something other than Recent so that the path bar with search icon appears * Type anything or press the search icon to enter search mode * The search icon changes to a folder. Press it. Actual result: everything disappears. No folders are displayed. Expected result: I would expect to see the folders of whatever directory I'm currently viewing.